--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -8,7 +8,8 @@
         <Nullable>enable</Nullable>
         <WarningsAsErrors>nullable</WarningsAsErrors>
         <AnalysisMode>all</AnalysisMode>
-        <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+        <!-- Broken by dotnet format https://github.com/dotnet/format/issues/1800 -->
+        <!--<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>-->
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
