Added per-package NuGet readmes

--- a/src/SharpAttributeParser/SharpAttributeParser.csproj
+++ b/src/SharpAttributeParser/SharpAttributeParser.csproj
@@ -5,6 +5,18 @@
         <RootNamespace>SharpAttributeParser</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <Title>SharpAttributeParser</Title>
+        <Description>
+            Parses C\# attributes using the Roslyn API, primarily intended for Analyzers and Source Generators.
+        </Description>
+        <PackageReadmeFile>README.nupkg.md</PackageReadmeFile>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\README.nupkg.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" PrivateAssets="all" />
     </ItemGroup>
