--- a/src/SharpAttributeParser.Abstractions/SharpAttributeParser.Abstractions.csproj
+++ b/src/SharpAttributeParser.Abstractions/SharpAttributeParser.Abstractions.csproj
@@ -5,6 +5,18 @@
         <RootNamespace>SharpAttributeParser</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <Title>SharpAttributeParser.Abstractions</Title>
+        <Description>
+            Provides abstractions for SharpAttributeParser.
+        </Description>
+        <PackageReadmeFile>README.nupkg.md</PackageReadmeFile>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\README.nupkg.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
