Use correct path for per-package readmes

--- a/src/SharpAttributeParser.Abstractions/SharpAttributeParser.Abstractions.csproj
+++ b/src/SharpAttributeParser.Abstractions/SharpAttributeParser.Abstractions.csproj
@@ -14,7 +14,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="..\README.nupkg.md" Pack="true" PackagePath="\" />
+        <None Include="README.nupkg.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
