--- a/.github/workflows/testPR.yml
+++ b/.github/workflows/testPR.yml
@@ -23,4 +23,4 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       run: |
         dotnet tool restore
-        dotnet cake --target=Test
+        dotnet cake --target=Pack
