--- a/src/SharpAttributeParser/SharpAttributeParser.csproj
+++ b/src/SharpAttributeParser/SharpAttributeParser.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" PrivateAssets="all" />
+        <PackageReference Include="OneOf" />
     </ItemGroup>
 
     <ItemGroup>
