--- a/tests/unit/SharpAttributeParser.Patterns.UnitTests/SharpAttributeParser.Patterns.UnitTests.csproj
+++ b/tests/unit/SharpAttributeParser.Patterns.UnitTests/SharpAttributeParser.Patterns.UnitTests.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
         <PackageReference Include="Microsoft.Extensions.Hosting" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
     </ItemGroup>
 
     <ItemGroup>
@@ -25,7 +26,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\src\SharpAttributeParser.Patterns.DependencyInjection\SharpAttributeParser.Patterns.DependencyInjection.csproj" />
-        <ProjectReference Include="..\..\TestUtility\TestUtility.csproj" />
+        <ProjectReference Include="..\..\SharpAttributeParser.Tests.Common\SharpAttributeParser.Tests.Common.csproj" />
     </ItemGroup>
 
 </Project>
