--- a/src/SharpAttributeParser.Logging.Common/SharpAttributeParser.Logging.Common.csproj
+++ b/src/SharpAttributeParser.Logging.Common/SharpAttributeParser.Logging.Common.csproj
@@ -6,9 +6,16 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <IsPackable>true</IsPackable>
+        <Title>SharpAttributeParser.Logging.Common</Title>
+        <Description>
+            Provides SharpAttributeParser with common functionality related to logging.
+        </Description>
+        <PackageReadmeFile>README.nupkg.md</PackageReadmeFile>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="README.nupkg.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging" />
