--- a/src/SharpAttributeParser.Logging.DependencyInjection/SharpAttributeParser.Logging.DependencyInjection.csproj
+++ b/src/SharpAttributeParser.Logging.DependencyInjection/SharpAttributeParser.Logging.DependencyInjection.csproj
@@ -22,7 +22,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SharpAttributeParser.Logging.Common\SharpAttributeParser.Logging.Common.csproj" PrivateAssets="all" />
+        <ProjectReference Include="..\SharpAttributeParser.Logging.Abstractions\SharpAttributeParser.Logging.Abstractions.csproj" />
+        <ProjectReference Include="..\SharpAttributeParser.Logging.Common\SharpAttributeParser.Logging.Common.csproj" PrivateAssets="compile" />
         <ProjectReference Include="..\SharpAttributeParser.Logging\SharpAttributeParser.Logging.csproj" />
     </ItemGroup>
 
