--- a/src/SharpAttributeParser/SharpAttributeParser.csproj
+++ b/src/SharpAttributeParser/SharpAttributeParser.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\SharpAttributeParser.Abstractions\SharpAttributeParser.Abstractions.csproj" />
+        <ProjectReference Include="..\SharpAttributeParser.Logging.Abstractions\SharpAttributeParser.Logging.Abstractions.csproj" />
         <ProjectReference Include="..\SharpAttributeParser.Logging\SharpAttributeParser.Logging.csproj" />
     </ItemGroup>
 
