--- a/src/SharpAttributeParser.Mappers.Logging/SharpAttributeParser.Mappers.Logging.csproj
+++ b/src/SharpAttributeParser.Mappers.Logging/SharpAttributeParser.Mappers.Logging.csproj
@@ -18,8 +18,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SharpAttributeParser.Logging.Common\SharpAttributeParser.Logging.Common.csproj" PrivateAssets="all" />
+        <ProjectReference Include="..\SharpAttributeParser.Abstractions\SharpAttributeParser.Abstractions.csproj" />
+        <ProjectReference Include="..\SharpAttributeParser.Logging.Common\SharpAttributeParser.Logging.Common.csproj" PrivateAssets="compile" />
+        <ProjectReference Include="..\SharpAttributeParser.Mappers.Abstractions\SharpAttributeParser.Mappers.Abstractions.csproj" />
         <ProjectReference Include="..\SharpAttributeParser.Mappers.Logging.Abstractions\SharpAttributeParser.Mappers.Logging.Abstractions.csproj" />
+        <ProjectReference Include="..\SharpAttributeParser.Mappers.Repositories.Abstractions\SharpAttributeParser.Mappers.Repositories.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
