--- a/src/SharpAttributeParser.Mappers.Repositories.DependencyInjection/SharpAttributeParser.Mappers.Repositories.DependencyInjection.csproj
+++ b/src/SharpAttributeParser.Mappers.Repositories.DependencyInjection/SharpAttributeParser.Mappers.Repositories.DependencyInjection.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\SharpAttributeParser.Mappers.Repositories.Abstractions\SharpAttributeParser.Mappers.Repositories.Abstractions.csproj" />
         <ProjectReference Include="..\SharpAttributeParser.Mappers.Repositories\SharpAttributeParser.Mappers.Repositories.csproj" />
         <ProjectReference Include="..\SharpAttributeParser.Patterns.DependencyInjection\SharpAttributeParser.Patterns.DependencyInjection.csproj" />
     </ItemGroup>
