--- a/src/SharpAttributeParser.Mappers.Repositories.Logging/SharpAttributeParser.Mappers.Repositories.Logging.csproj
+++ b/src/SharpAttributeParser.Mappers.Repositories.Logging/SharpAttributeParser.Mappers.Repositories.Logging.csproj
@@ -18,7 +18,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SharpAttributeParser.Logging.Common\SharpAttributeParser.Logging.Common.csproj" PrivateAssets="all" />
+        <ProjectReference Include="..\SharpAttributeParser.Logging.Common\SharpAttributeParser.Logging.Common.csproj" PrivateAssets="compile" />
+        <ProjectReference Include="..\SharpAttributeParser.Mappers.Repositories.Abstractions\SharpAttributeParser.Mappers.Repositories.Abstractions.csproj" />
         <ProjectReference Include="..\SharpAttributeParser.Mappers.Repositories.Logging.Abstractions\SharpAttributeParser.Mappers.Repositories.Logging.Abstractions.csproj" />
     </ItemGroup>
 
