--- a/src/SharpAttributeParser.Patterns.DependencyInjection/SharpAttributeParser.Patterns.DependencyInjection.csproj
+++ b/src/SharpAttributeParser.Patterns.DependencyInjection/SharpAttributeParser.Patterns.DependencyInjection.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\SharpAttributeParser.Patterns.Abstractions\SharpAttributeParser.Patterns.Abstractions.csproj" />
       <ProjectReference Include="..\SharpAttributeParser.Patterns\SharpAttributeParser.Patterns.csproj" />
     </ItemGroup>
 
