--- a/tests/unit/SharpAttributeParser.Mappers.Repositories.UnitTests/SharpAttributeParser.Mappers.Repositories.UnitTests.csproj
+++ b/tests/unit/SharpAttributeParser.Mappers.Repositories.UnitTests/SharpAttributeParser.Mappers.Repositories.UnitTests.csproj
@@ -25,7 +25,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.Mappers.Abstractions\SharpAttributeParser.Mappers.Abstractions.csproj" />
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.Mappers.Repositories.Abstractions\SharpAttributeParser.Mappers.Repositories.Abstractions.csproj" />
         <ProjectReference Include="..\..\..\src\SharpAttributeParser.Mappers.Repositories.DependencyInjection\SharpAttributeParser.Mappers.Repositories.DependencyInjection.csproj" />
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.Mappers.Repositories.Logging.Abstractions\SharpAttributeParser.Mappers.Repositories.Logging.Abstractions.csproj" />
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.Mappers.Repositories\SharpAttributeParser.Mappers.Repositories.csproj" />
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.Patterns.Abstractions\SharpAttributeParser.Patterns.Abstractions.csproj" />
         <ProjectReference Include="..\..\SharpAttributeParser.Tests.Common\SharpAttributeParser.Tests.Common.csproj" />
     </ItemGroup>
 
