--- a/tests/unit/SharpAttributeParser.Mappers.UnitTests/SharpAttributeParser.Mappers.UnitTests.csproj
+++ b/tests/unit/SharpAttributeParser.Mappers.UnitTests/SharpAttributeParser.Mappers.UnitTests.csproj
@@ -25,7 +25,13 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.Abstractions\SharpAttributeParser.Abstractions.csproj" />
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.Mappers.Abstractions\SharpAttributeParser.Mappers.Abstractions.csproj" />
         <ProjectReference Include="..\..\..\src\SharpAttributeParser.Mappers.DependencyInjection\SharpAttributeParser.Mappers.DependencyInjection.csproj" />
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.Mappers.Logging.Abstractions\SharpAttributeParser.Mappers.Logging.Abstractions.csproj" />
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.Mappers.Repositories.Abstractions\SharpAttributeParser.Mappers.Repositories.Abstractions.csproj" />
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.Mappers\SharpAttributeParser.Mappers.csproj" />
+        <ProjectReference Include="..\..\..\src\SharpAttributeParser.RecordBuilders.Abstractions\SharpAttributeParser.RecordBuilders.Abstractions.csproj" />
         <ProjectReference Include="..\..\SharpAttributeParser.Tests.Common\SharpAttributeParser.Tests.Common.csproj" />
     </ItemGroup>
 
