--- a/src/SharpAttributeParser.Abstractions/SharpAttributeParser.Abstractions.csproj
+++ b/src/SharpAttributeParser.Abstractions/SharpAttributeParser.Abstractions.csproj
@@ -8,7 +8,7 @@
     <PropertyGroup>
         <Title>SharpAttributeParser.Abstractions</Title>
         <Description>
-            Provides abstractions of SharpAttributeParser.
+            Provides abstractions of 'SharpAttributeParser'.
         </Description>
         <PackageReadmeFile>README.nupkg.md</PackageReadmeFile>
     </PropertyGroup>
