--- a/src/SharpAttributeParser.DependencyInjection/SharpAttributeParser.DependencyInjection.csproj
+++ b/src/SharpAttributeParser.DependencyInjection/SharpAttributeParser.DependencyInjection.csproj
@@ -8,7 +8,7 @@
     <PropertyGroup>
         <Title>SharpAttributeParser.DependencyInjection</Title>
         <Description>
-            Allows the services provided by SharpAttributeParser to be registered with DI-containers.
+            Allows the services provided by 'SharpAttributeParser' to be registered with DI-containers.
         </Description>
         <PackageReadmeFile>README.nupkg.md</PackageReadmeFile>
     </PropertyGroup>
