--- a/src/SharpAttributeParser.Logging.DependencyInjection/SharpAttributeParser.Logging.DependencyInjection.csproj
+++ b/src/SharpAttributeParser.Logging.DependencyInjection/SharpAttributeParser.Logging.DependencyInjection.csproj
@@ -8,7 +8,7 @@
     <PropertyGroup>
         <Title>SharpAttributeParser.Logging.DependencyInjection</Title>
         <Description>
-            Allows the services provided by SharpAttributeParser.Logging to be registered with DI-containers.
+            Allows the services provided by 'SharpAttributeParser.Logging' to be registered with DI-containers.
         </Description>
         <PackageReadmeFile>README.nupkg.md</PackageReadmeFile>
     </PropertyGroup>
