--- a/src/SharpAttributeParser.Logging/SharpAttributeParser.Logging.csproj
+++ b/src/SharpAttributeParser.Logging/SharpAttributeParser.Logging.csproj
@@ -8,7 +8,7 @@
     <PropertyGroup>
         <Title>SharpAttributeParser.Logging</Title>
         <Description>
-            Handles logging for SharpAttributeParser.
+            Handles logging for 'SharpAttributeParser'.
         </Description>
         <PackageReadmeFile>README.nupkg.md</PackageReadmeFile>
     </PropertyGroup>
