--- a/src/SharpAttributeParser.Mappers.Repositories.Logging/SharpAttributeParser.Mappers.Repositories.Logging.csproj
+++ b/src/SharpAttributeParser.Mappers.Repositories.Logging/SharpAttributeParser.Mappers.Repositories.Logging.csproj
@@ -8,7 +8,7 @@
     <PropertyGroup>
         <Title>SharpAttributeParser.Mappers.Repositories.Logging</Title>
         <Description>
-            Handles logging for SharpAttributeParser.Mappers.Repositories.
+            Handles logging for 'SharpAttributeParser.Mappers.Repositories'.
         </Description>
         <PackageReadmeFile>README.nupkg.md</PackageReadmeFile>
     </PropertyGroup>
