--- a/src/SharpAttributeParser.RecordBuilders/SharpAttributeParser.RecordBuilders.csproj
+++ b/src/SharpAttributeParser.RecordBuilders/SharpAttributeParser.RecordBuilders.csproj
@@ -8,7 +8,7 @@
     <PropertyGroup>
         <Title>SharpAttributeParser.RecordBuilders</Title>
         <Description>
-            Adds record-builders to SharpAttributeParser.
+            Adds record-builders to 'SharpAttributeParser'.
         </Description>
         <PackageReadmeFile>README.nupkg.md</PackageReadmeFile>
     </PropertyGroup>
