--- a/.editorconfig
+++ b/.editorconfig
@@ -402,6 +402,8 @@ csharp_style_prefer_method_group_conversion = true:suggestion
 csharp_style_prefer_top_level_statements = false:suggestion
 csharp_space_around_binary_operators = before_and_after
 
+csharp_style_prefer_primary_constructors = false
+
 [*.cs]
 
 dotnet_naming_rule.interface_should_be_begins_with_i.severity = suggestion
