--- a/tests/integration/SharpAttributeParser.IntegrationTests/.editorconfig
+++ b/tests/integration/SharpAttributeParser.IntegrationTests/.editorconfig
@@ -6,5 +6,8 @@ dotnet_diagnostic.CA1062.severity = none
 # Identifiers should not contain underscores
 dotnet_diagnostic.CA1707.severity = none
 
+# Avoid constant arrays as arguments
+dotnet_diagnostic.CA1861.severity = none
+
 # Consider calling ConfigureAwait on the awaited task
 dotnet_diagnostic.CA2007.severity = none
