--- a/tests/unit/SharpAttributeParser.Mappers.Repositories.UnitTests/.editorconfig
+++ b/tests/unit/SharpAttributeParser.Mappers.Repositories.UnitTests/.editorconfig
@@ -8,3 +8,6 @@ dotnet_diagnostic.CA1711.severity = none
 
 # Identifiers should not match keywords
 dotnet_diagnostic.CA1716.severity = none
+
+# Use concrete types when possible for improved performance
+dotnet_diagnostic.CA1859.severity = none
