--- a/tests/unit/SharpAttributeParser.UnitTests/.editorconfig
+++ b/tests/unit/SharpAttributeParser.UnitTests/.editorconfig
@@ -6,5 +6,8 @@ dotnet_diagnostic.CA1707.severity = none
 # Identifiers should not have incorrect suffix
 dotnet_diagnostic.CA1711.severity = none
 
+# Avoid constant arrays as arguments
+dotnet_diagnostic.CA1861.severity = none
+
 # Consider calling ConfigureAwait on the awaited task
 dotnet_diagnostic.CA2007.severity = none
